# streaming-eversion

./: CHANGELOG  CHANGELOG.md  README.md  foldl-transduce.cabal  package.cabal  streaming-eversion.cabal
src/Control/Foldl/: Streaming.hs
src/Streaming/: Eversion.hs
src/Streaming/Eversion/: Pipes.hs
tests/: doctests.hs  tests.hs
